# sourmash_plugin_tables

./: README.md  environment.yml  pyproject.toml
examples/: phyloseq.html  phyloseq.md  phyloseq.rmd
examples/data/: dense-gather.k31-s1000-t3000.csv  tiny_example.csv
examples/data/gather/: ERR1136663.k31-s1000-t3000.csv  ERR4087400.k31-s1000-t3000.csv  ERR4562131.k31-s1000-t3000.csv  SRR059888.k31-s1000-t3000.csv  SRR9217435.k31-s1000-t3000.csv
examples/data/sigs/: ERR4087400.sig  ERR4562131.sig  SRR9217435.sig
src/: gmrepo.parquet  gmrepo_data_to_parquet.py  output.parquet  polar_presence.py  presence_collapse.py  rda_to_parquet.r  sourmash_plugin_tables.py
tests/test-data/crc-human-saliva/: ERR2764877-k31-s1000.species.gather.csv  ERR2764878-k31-s1000.species.gather.csv  ERR2764879-k31-s1000.species.gather.csv  ERR2764880-k31-s1000.species.gather.csv  ERR2764881-k31-s1000.species.gather.csv
tests/test-data/crc-human-stool/: ERR1018227-k31-s1000.species.gather.csv  ERR1018228-k31-s1000.species.gather.csv  ERR1018229-k31-s1000.species.gather.csv  ERR1018230-k31-s1000.species.gather.csv  ERR1018231-k31-s1000.species.gather.csv
tests/test-data/healthy-human-saliva/: ERR2764887-k31-s1000.species.gather.csv  ERR2764888-k31-s1000.species.gather.csv  ERR2764889-k31-s1000.species.gather.csv  ERR2764890-k31-s1000.species.gather.csv  ERR2764891-k31-s1000.species.gather.csv
tests/test-data/healthy-human-stool/: ERR1018232-k31-s1000.species.gather.csv  ERR1018233-k31-s1000.species.gather.csv  ERR1018234-k31-s1000.species.gather.csv  (+2 more)
